pages from Aiya

--- a/src/styleguide.html
+++ b/src/styleguide.html
@@ -7,6 +7,7 @@
       name="viewport"
       content="width=device-width,initial-scale=1,user-scalable=no"
     />
+
     <!-- Primary Meta Tags -->
     <title>Стайлгайд</title>
     <meta name="title" content="Ремёсла России" />
@@ -54,7 +55,6 @@
         <a href="#s3">Цвета</a>
         <a href="#s4">Типографика</a>
         <a href="#s5">Стикеры</a>
-        <a href="#6">Сетка</a>
         <a href="#7">Носители стиля</a>
       </nav>
     </div>
@@ -64,7 +64,7 @@
         <div class="shape">
           <h1>Стайлгайд</h1>
         </div>
-        <div class="marquee"></div>
+        <img class="titleim" src="images/styleguide/title.png" />
       </div>
 
       <div class="about">
@@ -110,7 +110,9 @@
               <li>Яркий</li>
             </ul>
           </div>
+          <img src="./images/styleguide/missiya 1.png" alt="" />
         </div>
+
         <div class="mission">
           <h3>
             Наша миссия&nbsp;— популяризация народных ремёсел и&nbsp;искусств
@@ -120,7 +122,7 @@
 
       <div class="logotype">
         <div class="shape">
-          <h2 id="s2">Логотип</h2>
+          <h2 id="s2">Описание логотипа</h2>
         </div>
         <div class="text">
           <p>
@@ -130,6 +132,9 @@
           </p>
         </div>
         <img class="logo2" src="images/styleguide/logo2.svg" />
+        <div class="shape2">
+          <h2 id="s2">Расположение логотипа</h2>
+        </div>
         <div class="text">
           <p>
             Слова могут быть по-разному расположены относительно друг друга,
@@ -139,6 +144,9 @@
           </p>
         </div>
         <img class="logo2" src="images/styleguide/logo3.svg" />
+        <div class="shape3">
+          <h2 id="s2">Недопустимое использование</h2>
+        </div>
         <div class="text">
           <p>
             Недопустимо ставить слова логотипа слишком далеко друг
@@ -154,53 +162,14 @@
         </div>
         <div class="text">
           <p>
-            Для выбора цветовой гаммы стиля мы&nbsp;проанализировали цвета,
-            используемые в&nbsp;народных ремёслах, и&nbsp;решили использовать
-            не&nbsp;самые часто встречаемые (красный, золотой, цвет обожжённой
-            глины и&nbsp;необработанного дерева), а&nbsp;более редкие, менее
-            банальные, но&nbsp;всё равно отсылающие к&nbsp;народным искусствам:
+            Каждое ремесло уникально и&nbsp;их&nbsp;великое
+            множество&nbsp;&mdash; поэтому мы&nbsp;выбрали большую цветовую
+            палитру для нашего проекта, чтобы каждое ремесло в&nbsp;сочетании
+            с&nbsp;подобранным для него цветом обрело новое, современное
+            звучание.
           </p>
         </div>
-        <div class="colors">
-          <div class="c_pink">
-            <img src="images/styleguide/c_pink.png" />
-            <div class="text">
-              <p>
-                Светло-розовый, вдохновением для которого стали павловопосадские
-                платки
-              </p>
-            </div>
-          </div>
-
-          <div class="c_green">
-            <img src="images/styleguide/c_green.png" />
-            <div class="text">
-              <p>
-                Изумрудно-зелёный, отсылающий к&nbsp;цвету малахита, материала
-                ремесленников с&nbsp;Урала
-              </p>
-            </div>
-          </div>
-
-          <div class="c_biue">
-            <img src="images/styleguide/c_blue.png" />
-            <div class="text">
-              <p>
-                Оттенок синего, основой для которого стал цвет хрустальных
-                изделий из&nbsp;Пензенской области
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <div class="text2">
-          <p>
-            Эти три основных цвета, а&nbsp;также чёрный и&nbsp;белый,
-            используются для создания контента, связанного непосредственно
-            с&nbsp;брендом (мерч, сайт).
-          </p>
-        </div>
-        <img class="all_colors" src="images/styleguide/colors.svg" />
+        <img class="colorim" src="./images/styleguide/color1.png" />
       </div>
 
       <div class="typography">
@@ -305,7 +274,7 @@
         </div>
 
         <div class="text">
-          <p>
+          <p class="-sticker">
             Основа фирменного стиля нашего проекта&nbsp;&mdash; стикеры.
             В&nbsp;стикерах используются изображения народных промыслов (целые
             объекты или их&nbsp;фрагменты), а&nbsp;также слова
@@ -317,45 +286,10 @@
         </div>
 
         <img src="images/styleguide/stickers2.png" />
-        <div class="text2">
-          <p>
-            Фотографии ремёсел должны быть в&nbsp;хорошем качестве
-            и&nbsp;равномерно освещены. Вырезать фрагменты из&nbsp;изображений
-            необходимо аккуратно.
-          </p>
-          <p>
-            Текстовые стикеры могут использоваться как заголовки или акцентные
-            элементы (названия ремёсел, территорий, разделов).
-          </p>
+        <div class="shape no">
+          <h2 id="s5">Недопустимое использование</h2>
         </div>
-        <img src="images/styleguide/stickers3.svg" />
-
-        <div class="text3">
-          <p>
-            Цвет шейпа выбирается из&nbsp;трёх фирменных цветов, чёрного
-            и&nbsp;белого. Важно, чтобы цвет шейпа не&nbsp;перебивал цвет
-            растрового изображения. Для ремёсел, которые традиционно используют
-            белый или чёрный фон, рекомендуется использовать шейп
-            соответствующего цвета (белый шейп для элементов гжельской росписи;
-            чёрный цвет для элементов с&nbsp;жостовского подноса).
-          </p>
-        </div>
-        <h4>Недопустимое использование:</h4>
         <img class="img_e" src="images/styleguide/stickers4.png" />
-      </div>
-
-      <div class="grid">
-        <div class="shape">
-          <h2 id="s6">Сетка</h2>
-        </div>
-        <div class="text">
-          <p>
-            Сетка используется только для размещения текста. Стикеры
-            располагаются более хаотично, но&nbsp;со&nbsp;смещением к&nbsp;краям
-            занимаемого пространства.
-          </p>
-        </div>
-        <img src="images/styleguide/grid2.png" />
       </div>
 
       <div class="merch">
@@ -366,6 +300,8 @@
           <img src="images/styleguide/merch1.png" />
           <img src="images/styleguide/merch2.png" />
           <img src="images/styleguide/merch3.png" />
+          <img src="images/styleguide/merch4.png" />
+          <img src="images/styleguide/merch5.png" />
         </div>
       </div>
     </div>
