--- a/src/articles.html
+++ b/src/articles.html
@@ -86,60 +86,51 @@
       </div>
 
       <div class="C_CraftsCards">
-        <a class="M_CraftsCard" data-tags="Общество" href="#">
+        <a class="M_CraftsCard" href="./articless/dpi.html">
+          <img
+            class="A_CraftsCardPic"
+            src="images/articles/dpi.jpg"
+            alt="Музей ДПИ"
+          />
+          <div class="W_CraftsCardTexts">
+            <h4 class="A_CraftsCardTitle">Музей ДПИ</h4>
+            <p class="A_CraftsCardDescription">
+              Музей, в котором можно увидеть древние ремёсла и современный
+              дизайн
+            </p>
+          </div>
+        </a>
+
+        <a class="M_CraftsCard" href="#">
           <img
             class="A_CraftsCardPic"
             src="images/articles/article2.jpg"
             alt="У каких народов есть резьба по кости"
           />
-          <p class="A_CraftsCardTitle">
-            У&nbsp;каких народов есть резьба по&nbsp;кости
-          </p>
+          <div class="W_CraftsCardTexts">
+            <h4 class="A_CraftsCardTitle">
+              У каких народов есть резьба по кости
+            </h4>
+            <p class="A_CraftsCardDescription">
+              Как география и история народов повлияли на появление ремёсел
+            </p>
+          </div>
         </a>
 
-        <a class="M_CraftsCard" data-tags="Общество" href="#">
-          <img
-            class="A_CraftsCardPic"
-            src="images/articles/article1.jpg"
-            alt="5 малоизвестных ремёсел Дагестана"
-          />
-          <p class="A_CraftsCardTitle">5 малоизвестных ремёсел Дагестана</p>
-        </a>
-
-        <a class="M_CraftsCard" data-tags="История,Дизайн" href="#">
-          <img
-            class="A_CraftsCardPic"
-            src="images/articles/article3.jpg"
-            alt="Выбираем сервиз с историей"
-          />
-          <p class="A_CraftsCardTitle">Выбираем сервиз с&nbsp;историей</p>
-        </a>
-
-        <a class="M_CraftsCard" data-tags="История" href="#">
+        <a class="M_CraftsCard" href="#">
           <img
             class="A_CraftsCardPic"
             src="images/articles/article4.jpg"
             alt="Традиционные детские игрушки"
           />
-          <p class="A_CraftsCardTitle">Традиционные детские игрушки</p>
-        </a>
-
-        <a class="M_CraftsCard" data-tags="История,Дизайн" href="#">
-          <img
-            class="A_CraftsCardPic"
-            src="images/articles/article5.jpg"
-            alt="Русская вышивка и пиксель-арт?"
-          />
-          <p class="A_CraftsCardTitle">Русская вышивка и&nbsp;пиксель-арт?</p>
-        </a>
-
-        <a class="M_CraftsCard" data-tags="История,Общество" href="#">
-          <img
-            class="A_CraftsCardPic"
-            src="images/articles/article6.jpg"
-            alt="Искусство за полярным кругом"
-          />
-          <p class="A_CraftsCardTitle">Искусство за&nbsp;полярным кругом</p>
+          <div class="W_CraftsCardTexts">
+            <h4 class="A_CraftsCardTitle">
+              Традиционные детские игрушки
+            </h4>
+            <p class="A_CraftsCardDescription">
+              Игрушка как первая форма проявления народного творчества
+            </p>
+          </div>
         </a>
       </div>
     </section>
