--- a/src/crafts.html
+++ b/src/crafts.html
@@ -268,7 +268,7 @@
         <a
           class="M_CraftsCard"
           data-tags="Глина (керамика),Роспись"
-          href="./crafts/abashevskaya-toy.html"
+          href="./crafts/dimskaya-toy.html"
         >
           <img
             class="A_CraftsCardPic"
