--- a/src/crafts/vologodskoe-lace.html
+++ b/src/crafts/vologodskoe-lace.html
@@ -254,11 +254,33 @@
 
       <section class="O_CraftGallery">
         <h4 class="A_CraftBodySubtitle">Фотогалерея</h4>
-        <img
-          class="Q_CraftBodyImage gal"
-          src="../images/craft/vologodskoe-lace/gal1.jpg"
-          alt=""
-        />
+
+        <div class="W_SliderWithDescription">
+          <div class="A_SliderArrows">
+            <div class="Q_Icon ArrowLeft size48x48"></div>
+
+            <div class="A_SliderImage">
+              <div class="W_SliderRails">
+                <img
+                  class="Q_CraftBodyImageGal"
+                  src="../images/craft/vologodskoe-lace/slider1.jpg"
+                  alt=""
+                />
+                <img
+                  class="Q_CraftBodyImageGal"
+                  src="../images/craft/vologodskoe-lace/slider2.jpg"
+                  alt=""
+                />
+                <img
+                  class="Q_CraftBodyImageGal"
+                  src="../images/craft/vologodskoe-lace/slider3.jpg"
+                  alt=""
+                />
+              </div>
+            </div>
+            <div class="Q_Icon ArrowRight size48x48"></div>
+          </div>
+        </div>
       </section>
 
       <div class="M_CraftBodyList">
