--- a/src/index.html
+++ b/src/index.html
@@ -95,6 +95,106 @@
       </div>
     </section>
 
+    <section class="O_MainTeaser Matr">
+      <div class="M_MainContentM">
+        <img class="A_MainImg Matr" src="images/main/img1.png" alt="" />
+        <div class="M_MainRead">
+          <div class="W_MainTexts">
+            <h3 class="A_MainTitle Matr">
+              Там внутри&nbsp;&mdash; ещё матрёшка
+            </h3>
+            <p class="A_MainTextBody w505">
+              Как возникла эта всем хорошо знакомая игрушка? Почему матрёшка
+              стала символом России и&nbsp;откуда такое разнообразие
+              в&nbsp;одной форме? Обо всём этом и&nbsp;не&nbsp;только
+              в&nbsp;нашей статье про игрушку с&nbsp;богатым внутренним миром.
+            </p>
+          </div>
+          <a href="#" class="A_MainButton">Читать &rarr;</a>
+        </div>
+      </div>
+      <h6 class="A_MainTagCategory Matr">Новый материал</h6>
+    </section>
+
+    <section class="O_MainMostPop">
+      <h5 class="A_MainTitlePop">Самое популярное за июнь:</h5>
+      <div class="C_CraftsCards">
+        <a
+          class="M_CraftsCard"
+          data-tags="Текстиль,Вязание"
+          href="./crafts/vologodskoe-lace.html"
+        >
+          <img
+            class="A_CraftsCardPic white"
+            src="images/crafts/Vologda-lace.jpg"
+            alt="Вологодское кружево"
+          />
+          <div class="W_CraftsCardTexts">
+            <h4 class="A_CraftsCardTitle black">Вологодское кружево</h4>
+            <p class="A_CraftsCardDescription black">
+              Льняные узоры, плетённые на&nbsp;коклюшках
+            </p>
+          </div>
+        </a>
+
+        <a
+          class="M_CraftsCard"
+          data-tags="Роспись"
+          href="./crafts/palehskaya-min.html"
+        >
+          <img
+            class="A_CraftsCardPic white"
+            src="images/crafts/paleh.jpg"
+            alt="Палехская миниатюра"
+          />
+          <div class="W_CraftsCardTexts">
+            <h4 class="A_CraftsCardTitle black">Палехская миниатюра</h4>
+            <p class="A_CraftsCardDescription black">
+              Тончайшая роспись с&nbsp;богатыми сюжетами
+            </p>
+          </div>
+        </a>
+
+        <a
+          class="M_CraftsCard"
+          data-tags="Роспись,Дерево"
+          href="./crafts/velikoustugskaya-rospis.html"
+        >
+          <img
+            class="A_CraftsCardPic white"
+            src="images/crafts/veliko.jpg"
+            alt="Великоустюгская роспись"
+          />
+          <div class="W_CraftsCardTexts">
+            <h4 class="A_CraftsCardTitle black">Великоустюгская роспись</h4>
+            <p class="A_CraftsCardDescription black">
+              Растительные орнаменты на&nbsp;деревянной утвари
+            </p>
+          </div>
+        </a>
+      </div>
+    </section>
+
+    <section class="O_MainTeaser MDPI">
+      <div class="M_MainContentD">
+        <div class="M_MainRead">
+          <div class="W_MainTexts">
+            <h3 class="A_MainTitle MDPI">
+              Музей декоративного искусства
+            </h3>
+            <p class="A_MainTextBody w505">
+              Музей декоративного искусства и&nbsp;народного творчества
+              в&nbsp;Москве не&nbsp;только обладает внушительной коллекцией
+              экспонатов, но&nbsp;и&nbsp;регулярно проводит новые выставыки.
+            </p>
+          </div>
+          <a href="#" class="A_MainButton">Подробности &rarr;</a>
+        </div>
+        <img class="A_MainImg MDPI" src="images/main/img2.png" alt="" />
+      </div>
+      <h6 class="A_MainTagCategory MDPI">Куда сходить на выходных</h6>
+    </section>
+
     <!-- <a href="/" id="random-link">случайная ссылка</a> -->
 
     <div class="O_Footer black">
