--- a/src/crafts/tulskaya-stal.html
+++ b/src/crafts/tulskaya-stal.html
@@ -271,12 +271,35 @@
 
       <section class="O_CraftGallery">
         <h4 class="A_CraftBodySubtitle">Фотогалерея</h4>
-        <img
-          class="Q_CraftBodyImage gal"
-          src="../images/craft/tulskaya-stal/gal1.jpg"
-          alt=""
-        />
+
+        <div class="W_SliderWithDescription">
+          <div class="A_SliderArrows">
+            <div class="Q_Icon ArrowLeft size48x48"></div>
+
+            <div class="A_SliderImage">
+              <div class="W_SliderRails">
+                <img
+                  class="Q_CraftBodyImageGal"
+                  src="../images/craft/tulskaya-stal/slider1.jpg"
+                  alt=""
+                />
+                <img
+                  class="Q_CraftBodyImageGal"
+                  src="../images/craft/tulskaya-stal/slider2.jpg"
+                  alt=""
+                />
+                <img
+                  class="Q_CraftBodyImageGal"
+                  src="../images/craft/tulskaya-stal/slider3.jpg"
+                  alt=""
+                />
+              </div>
+            </div>
+            <div class="Q_Icon ArrowRight size48x48"></div>
+          </div>
+        </div>
       </section>
+      tulskaya-stal
 
       <div class="M_CraftBodyList">
         <h2 class="A_CraftBodySubtitle final">Где можно увидеть</h2>
