--- a/src/lending.html
+++ b/src/lending.html
@@ -1,140 +1,8 @@
 <!DOCTYPE html>
-<html lang="ru" dir="ltr">
+<html lang="en" dir="ltr">
   <head>
-    <link rel="icon" href="favicon.ico" />
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width,initial-scale=1,user-scalable=no"
-    />
-
-    <!-- Primary Meta Tags -->
-    <title>Ремёсла России</title>
-    <meta name="title" content="Ремёсла России" />
-    <meta
-      name="description"
-      content="Рассказываем о ремёслах страны, об их истории и о том, как они влияют на нашу жизнь сегодня"
-    />
-
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://russiancrafts.adc.ac" />
-    <meta property="og:title" content="Ремёсла России" />
-    <meta
-      property="og:description"
-      content="Рассказываем о ремёслах страны, об их истории и о том, как они влияют на нашу жизнь сегодня"
-    />
-    <meta
-      property="og:image"
-      content="https://russiancrafts.adc.ac/share/index.png"
-    />
-
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://russiancrafts.adc.ac" />
-    <meta property="twitter:title" content="Ремёсла России" />
-    <meta
-      property="twitter:description"
-      content="Рассказываем о ремёслах страны, об их истории и о том, как они влияют на нашу жизнь сегодня"
-    />
-    <meta
-      property="twitter:image"
-      content="https://russiancrafts.adc.ac/share/index.png"
-    />
-
-    <analytics></analytics>
+    <title></title>
   </head>
-
-  <body class="lending">
-    <section class="first">
-      <div class="start">
-        <h1>Знакомтесь с&nbsp;культурой вместе с&nbsp;нами!</h1>
-        <img class="forma" src="images/preview-lending/lead.svg" alt="" />
-      </div>
-    </section>
-
-    <div class="other">
-      <section class="second">
-        <div class="background">
-          <h2>
-            Ремесла России&nbsp;&mdash; это платформа для изучения народных
-            ремесел со&nbsp;всей России с&nbsp;системой поиска и&nbsp;подборками
-          </h2>
-          <img src="images/preview-lending/s8.png" alt="" />
-        </div>
-      </section>
-
-      <section class="third">
-        <h2>
-          Используйте <span class="yel">теги</span> и&nbsp;выбирайте
-          те&nbsp;статьи, которые вам интересны
-        </h2>
-        <div class="tags">
-          <div class="tag1">
-            <img src="./images/preview-lending/tag1.svg" alt="" />
-          </div>
-          <div class="tag2">
-            <img src="./images/preview-lending/tag2.svg" alt="" />
-          </div>
-          <div class="tag3">
-            <img src="./images/preview-lending/tag3.svg" alt="" />
-          </div>
-          <div class="tag4">
-            <img src="./images/preview-lending/tag4.svg" alt="" />
-          </div>
-          <div class="tag5">
-            <img src="./images/preview-lending/tag5.svg" alt="" />
-          </div>
-        </div>
-      </section>
-
-      <section class="four">
-        <div class="background">
-          <h2>
-            Воспользуйся <span class="pink">поиском</span>, чтобы найти
-            то&nbsp;самое ремесло
-          </h2>
-          <img src="images/preview-lending/s9.png" alt="" />
-        </div>
-      </section>
-
-      <section class="fifth">
-        <h2>
-          Чтобы было легко визуализировать, воспользуйся нашей
-          <span class="red"> картой </span>
-        </h2>
-        <img src="./images/preview-lending/map.png" alt="" />
-      </section>
-
-      <section class="six">
-        <h2>
-          Читай интересные <span class="yel">статьи</span>, которые
-          мы&nbsp;собрали
-        </h2>
-        <img src="images/preview-lending/s10.png" alt="" />
-      </section>
-
-      <section class="seven">
-        <div class="background">
-          <h2>
-            А&nbsp;чтобы было легче найти то&nbsp;или иное ремесло воспользуйся
-            <span class="blue">фильтрами</span>
-          </h2>
-          <img src="images/preview-lending/filter.png" alt="" />
-        </div>
-      </section>
-
-      <section class="eight">
-        <h3>
-          Мы&nbsp;долго думали, как интересно и&nbsp;современно рассказать про
-          ремесла...
-        </h3>
-        <h2>
-          Затем&nbsp;появилась идея&nbsp;придумать &laquo;
-          <span class="green">Ремёсла России&raquo;</span>!
-        </h2>
-        <img src="images/preview-lending/s11.png" alt="" />
-      </section>
-    </div>
-  </body>
+  <body></body>
 </html>
