--- a/src/index.html
+++ b/src/index.html
@@ -188,7 +188,9 @@
               экспонатов, но&nbsp;и&nbsp;регулярно проводит новые выставыки.
             </p>
           </div>
-          <a href="#" class="A_MainButton">Подробности &rarr;</a>
+          <a href=".articles/dpi.html" class="A_MainButton"
+            >Подробности &rarr;</a
+          >
         </div>
         <img class="A_MainImg MDPI" src="images/main/img2.png" alt="" />
       </div>
